# finetuning_llama3_hf

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/001_sft_llama3/: list_available_datasets.py  sft.py
examples/001_sft_llama3/etc/deepspeed/: accelerate_config_nproc1.yaml  accelerate_config_nproc4.yaml
examples/001_sft_llama3/runs/: train_llama3_on_single_gpu.sh
examples/002_sft_llama3_on_custom_dataset/: sft.py
examples/002_sft_llama3_on_custom_dataset/configs/: dataset_configs.py  training_args.py
examples/002_sft_llama3_on_custom_dataset/custom_datasets/: oasst2_ja_dataset_filtered.py  utils.py
examples/002_sft_llama3_on_custom_dataset/runs/: train_llama3_20240510.sh  train_llama3_nproc4.sh  train_llama3_on_custom_datasets.sh  train_llama3_on_custom_datasets_single_process.sh
examples/003_eval_elyza_tasks_100/: elyza_tasks_100.gbnf  evaluate.py  predict.py
notebooks/: 001_meta_llama_3_8b_instruct.ipynb
src/tuner/: __init__.py  _constants.py  _typing.py  sft.py
src/tuner/commands/: merge_adapter_and_unload.py
src/tuner/configs/: dataset_configs.py  generation_configs.py  inference_args.py  training_args.py
src/tuner/data/: __init__.py  collator.py  dataset_sequence.py  load.py
src/tuner/datasets/: __init__.py  dolly_ja_dataset.py  dolly_ja_dataset_sequence.py  oasst2_dataset_sequence.py  oasst2_ja_dataset_sequence.py
src/tuner/demo/: evaluate.py  predict.py  predict_on_elyza_tasks_100.ipynb  predict_on_elyza_tasks_100.py
src/tuner/modeling/: trainer.py
src/tuner/prompts/: __init__.py  base_prompt.py
src/tuner/utils/: __init__.py  config_utils.py  data_utils.py  distributed_utils.py  modeling_utils.py  tokenizer_utils.py
(+8 files in other folders)
